--- a/cats_vs_dogs.ipynb
+++ b/cats_vs_dogs.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyODLjiWmGkslXbcIq2qeSy7",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyODLjiWmGkslXbcIq2qeSy7"
     },
     "kernelspec": {
       "name": "python3",
@@ -19,18 +18,8 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/turki-ai/cats-vs-dogs-classification/blob/main/cats_vs_dogs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "j2AWmlHpjau5"
       },
@@ -47,7 +36,7 @@
       "metadata": {
         "id": "cqz8QPLCj45J"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -58,7 +47,7 @@
       "metadata": {
         "id": "s9vq09r7kIWR"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -69,7 +58,7 @@
       "metadata": {
         "id": "9tL_7eoek2OJ"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,7 +70,7 @@
       "metadata": {
         "id": "orlsyoLmkY94"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,7 +91,7 @@
         },
         "outputId": "b37d026c-f51c-42a4-d3a0-2909c172f1b3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,7 +121,7 @@
       "metadata": {
         "id": "Sqn-CbaNoHdY"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -147,7 +136,7 @@
         },
         "outputId": "b82a5211-c8e4-46de-c817-03b4c3d547d8"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,7 +160,7 @@
       "metadata": {
         "id": "p2r59XTIpc_P"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -195,7 +184,7 @@
         },
         "outputId": "93200d73-0203-469e-fab6-a60596f07690"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -230,7 +219,7 @@
         },
         "outputId": "7ec3ebc9-c683-47e6-b46a-33bef3ffd5f5"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -252,7 +241,7 @@
       "metadata": {
         "id": "wO2c8ZxotQrZ"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -269,7 +258,7 @@
       "metadata": {
         "id": "Iik3SWx0vEX4"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -289,7 +278,7 @@
         },
         "outputId": "434f2a24-0f71-4c64-a96f-cfad2b1a31c8"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -316,7 +305,7 @@
         },
         "outputId": "6ff1d0d5-695b-46a1-da22-770fa6df55c2"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,7 +327,7 @@
       "metadata": {
         "id": "dQDtdSPR17rf"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,7 +353,7 @@
         },
         "outputId": "e9b5b784-92f7-439d-9541-5013e60fdc60"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,7 +377,7 @@
       "metadata": {
         "id": "ur3a4sBc5_te"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -408,7 +397,7 @@
         },
         "outputId": "eb84b340-6d64-4bf0-a35e-60b1c0be0e23"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -459,7 +448,7 @@
         },
         "outputId": "873b2f7e-f054-4841-b195-0ba3833ece61"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -599,7 +588,7 @@
       "metadata": {
         "id": "mrKpLABZEKAM"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -626,7 +615,7 @@
       "metadata": {
         "id": "iejRpm2AETLT"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -642,7 +631,7 @@
         },
         "outputId": "ed455e1f-cd4c-42c8-d72c-b754c88e08fa"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
